--- a/css/index.css
+++ b/css/index.css
@@ -41,3 +41,13 @@ body {
     background-color: rgb(54, 134, 67);
     border: 2px solid whitesmoke;
 }
+
+#generate-button:active {
+    background-color: rgb(39, 97, 49);
+    box-shadow: inset 0 0 15px 3px rgb(27, 27, 27);
+    color:rgb(187, 187, 187);
+}
+
+input:invalid {
+    border-color: red;
+}
