--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     background-color: rgb(50, 50, 50);
     color: white;
+    font-size: 18px;
 }
 
 #header {
@@ -17,6 +18,11 @@ body {
 }
 
 #description {
+    text-align: center;
+    margin: 20px;
+}
+
+#help-text {
     text-align: center;
     margin: 20px;
 }
@@ -57,4 +63,9 @@ input {
 input:invalid {
     border-color: red;
     background-color: lightcoral;
+}
+
+.footer {
+    text-align: center;
+    margin-top: 420px;
 }
